--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,14 +9,25 @@
 body {
   overflow: hidden;
   background-color: #048D8F;
+  width: 100%;
+  height: 100%;
 }
 
 #windows-frame {
   position: relative;
   overflow: hidden; /* Clips any windows that spill outside main. */
-  width: 100vw;
-  height: 100vh;
+  /*width: 100vw;
+  height: 100vh;*/
   background-color: #048D8F;
+
+  width: 1280px;
+  height: 595px;
+  transform-origin: top left;
+  transform: scale(var(--scale));
+  
+}
+:root {
+  --scale: 1;
 }
 
 .toolbar {
@@ -25,7 +36,7 @@ body {
   bottom: 0;
   left: 0;
   width: 100vw;
-  height: 35px;
+  height: calc(35px*(var(--scale)));
   display: flex;
   align-items: center;        /* center content vertically */
   padding: 0 10px;
@@ -42,17 +53,17 @@ body {
   align-items: center;        /* vertically center icon & text */
   justify-content: center;
   
-  height: 25px;               /* or 100% to match the toolbar */
+  height: calc(25px*(var(--scale)));
   padding: 0 8px;             /* space around text/icon */
   background: white;
   cursor: pointer;
-  margin-left: 30px;
+  margin-left: calc(30px*(var(--scale)));
 }
 
 .toolbar button img {
   /* icon will be the same height as the button, minus a bit of padding */
-  height: 32px;                /* or a fixed px like 16px */
+  height: calc(32px*(var(--scale)));
   width: auto;
   object-fit: contain;
-  margin-right: 4px;          /* space between icon and text */
+  margin-right: calc(4px*(var(--scale))); /* Padding between image and text */
 }
