--- a/styles/aiinfo.css
+++ b/styles/aiinfo.css
@@ -12,8 +12,8 @@
   height: 252px;
 
   position: absolute;
-  z-index: 10;             /* higher than your background, lower/higher as needed */
-  top: 10px;               /* tweak these to place it where you like */
+  z-index: 10;             
+  top: 10px;              
   left: 510px;
   transform: scale(0.95);
 }
