--- a/styles/sweProjectStyles/sweproject.css
+++ b/styles/sweProjectStyles/sweproject.css
@@ -3,8 +3,8 @@
   height: 302px;
   
   position: absolute;
-  z-index: 11;             /* higher than your background, lower/higher as needed */
-  top: 200px;               /* tweak these to place it where you like */
+  z-index: 11;             
+  top: 200px;              
   left: 700px;
   transform: scale(1);
 }
